package pg

import (
	"testing"

	"github.com/antlr4-go/antlr/v4"
	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	storepb "github.com/bytebase/bytebase/backend/generated-go/store"
	pgparser "github.com/bytebase/bytebase/backend/plugin/parser/pg"
	"github.com/bytebase/bytebase/backend/plugin/schema"
	parser "github.com/bytebase/parser/postgresql"
)

// TestConstraintRewriteOperations tests the ANTLR TokenStreamRewriter functionality
// for constraint operations including add, modify, delete with various edge cases
func TestConstraintRewriteOperations(t *testing.T) {
	testCases := []struct {
		name          string
		originalSDL   string
		currentTable  *storepb.TableMetadata
		previousTable *storepb.TableMetadata
		expectedSDL   string
		description   string
	}{
		// Single Check Constraint Add Tests
		{
			name: "Add check constraint to table",
			originalSDL: `CREATE TABLE test (
    id INTEGER NOT NULL,
    age INTEGER
);`,
			currentTable: &storepb.TableMetadata{
				Name: "test",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "age", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{
					{Name: "chk_age_positive", Expression: "age > 0"},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "test",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "age", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{},
			},
			expectedSDL: `CREATE TABLE test (
    "id" INTEGER NOT NULL,
    "age" INTEGER,
    CONSTRAINT "chk_age_positive" CHECK (age > 0)
);`,
			description: "Should add check constraint to existing table",
		},

		// Check Constraint Drop Tests
		{
			name: "Drop check constraint from table",
			originalSDL: `CREATE TABLE test (
    id INTEGER NOT NULL,
    age INTEGER,
    CONSTRAINT chk_age_positive CHECK (age > 0)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "test",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "age", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{},
			},
			previousTable: &storepb.TableMetadata{
				Name: "test",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "age", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{
					{Name: "chk_age_positive", Expression: "age > 0"},
				},
			},
			expectedSDL: `CREATE TABLE test (
    "id" INTEGER NOT NULL,
    "age" INTEGER
);`,
			description: "Should drop check constraint from table",
		},

		// Foreign Key Constraint Add Tests
		{
			name: "Add foreign key constraint to table",
			originalSDL: `CREATE TABLE orders (
    id INTEGER NOT NULL,
    customer_id INTEGER
);`,
			currentTable: &storepb.TableMetadata{
				Name: "orders",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "customer_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{
					{
						Name:              "fk_customer",
						Columns:           []string{"customer_id"},
						ReferencedSchema:  "public",
						ReferencedTable:   "customers",
						ReferencedColumns: []string{"id"},
						OnDelete:          "CASCADE",
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "orders",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "customer_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{},
			},
			expectedSDL: `CREATE TABLE orders (
    "id" INTEGER NOT NULL,
    "customer_id" INTEGER,
    CONSTRAINT "fk_customer" FOREIGN KEY ("customer_id") REFERENCES "customers" ("id") ON DELETE CASCADE
);`,
			description: "Should add foreign key constraint to existing table",
		},

		// Complex Multi-Operation Tests
		{
			name: "Add check constraint and foreign key constraint",
			originalSDL: `CREATE TABLE products (
    id INTEGER NOT NULL,
    name VARCHAR(100),
    price DECIMAL,
    category_id INTEGER
);`,
			currentTable: &storepb.TableMetadata{
				Name: "products",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "name", Type: "VARCHAR(100)", Nullable: true},
					{Name: "price", Type: "DECIMAL", Nullable: true},
					{Name: "category_id", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{
					{Name: "chk_price_positive", Expression: "price > 0"},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{
					{
						Name:              "fk_category",
						Columns:           []string{"category_id"},
						ReferencedSchema:  "public",
						ReferencedTable:   "categories",
						ReferencedColumns: []string{"id"},
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "products",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "name", Type: "VARCHAR(100)", Nullable: true},
					{Name: "price", Type: "DECIMAL", Nullable: true},
					{Name: "category_id", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{},
				ForeignKeys:      []*storepb.ForeignKeyMetadata{},
			},
			expectedSDL: `CREATE TABLE products (
    "id" INTEGER NOT NULL,
    "name" VARCHAR(100),
    "price" DECIMAL,
    "category_id" INTEGER,
    CONSTRAINT "chk_price_positive" CHECK (price > 0),
    CONSTRAINT "fk_category" FOREIGN KEY ("category_id") REFERENCES "categories" ("id")
);`,
			description: "Should add both check and foreign key constraints",
		},

		// Primary Key Constraint Tests
		{
			name: "Add primary key constraint to table",
			originalSDL: `CREATE TABLE orders (
    id INTEGER NOT NULL,
    order_number VARCHAR(50)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "orders",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "order_number", Type: "VARCHAR(50)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "pk_orders",
						Primary:      true,
						Expressions:  []string{"id"},
						IsConstraint: true,
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "orders",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "order_number", Type: "VARCHAR(50)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{},
			},
			expectedSDL: `CREATE TABLE orders (
    "id" INTEGER NOT NULL,
    "order_number" VARCHAR(50),
    CONSTRAINT "pk_orders" PRIMARY KEY ("id")
);`,
			description: "Should add primary key constraint to existing table",
		},

		// Unique Constraint Tests
		{
			name: "Add unique constraint to table",
			originalSDL: `CREATE TABLE users (
    id INTEGER NOT NULL,
    email VARCHAR(255)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "users",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "uk_users_email",
						Unique:       true,
						Expressions:  []string{"email"},
						IsConstraint: true,
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "users",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{},
			},
			expectedSDL: `CREATE TABLE users (
    "id" INTEGER NOT NULL,
    "email" VARCHAR(255),
    CONSTRAINT "uk_users_email" UNIQUE ("email")
);`,
			description: "Should add unique constraint to existing table",
		},

		// Combined Constraint Tests
		{
			name: "Add primary key and unique constraints together",
			originalSDL: `CREATE TABLE customers (
    id INTEGER NOT NULL,
    email VARCHAR(255),
    phone VARCHAR(20)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "customers",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
					{Name: "phone", Type: "VARCHAR(20)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "pk_customers",
						Primary:      true,
						Expressions:  []string{"id"},
						IsConstraint: true,
					},
					{
						Name:         "uk_customers_email",
						Unique:       true,
						Expressions:  []string{"email"},
						IsConstraint: true,
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "customers",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
					{Name: "phone", Type: "VARCHAR(20)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{},
			},
			expectedSDL: `CREATE TABLE customers (
    "id" INTEGER NOT NULL,
    "email" VARCHAR(255),
    "phone" VARCHAR(20),
    CONSTRAINT "pk_customers" PRIMARY KEY ("id"),
    CONSTRAINT "uk_customers_email" UNIQUE ("email")
);`,
			description: "Should add both primary key and unique constraints",
		},

		// Test that FK always includes schema name (even for public schema)
		{
			name: "Add foreign key constraint with public schema reference",
			originalSDL: `CREATE TABLE orders (
    id INTEGER NOT NULL,
    customer_id INTEGER
);`,
			currentTable: &storepb.TableMetadata{
				Name: "orders",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "customer_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{
					{
						Name:              "fk_customer_public",
						Columns:           []string{"customer_id"},
						ReferencedSchema:  "public",
						ReferencedTable:   "customers",
						ReferencedColumns: []string{"id"},
						OnDelete:          "CASCADE",
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "orders",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "customer_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{},
			},
			expectedSDL: `CREATE TABLE orders (
    "id" INTEGER NOT NULL,
    "customer_id" INTEGER,
    CONSTRAINT "fk_customer_public" FOREIGN KEY ("customer_id") REFERENCES "public"."customers" ("id") ON DELETE CASCADE
);`,
			description: "Should always include schema name in FK references (even for public schema)",
		},

		// Drop Constraint Tests
		{
			name: "Drop primary key constraint from table",
			originalSDL: `CREATE TABLE users (
    id INTEGER NOT NULL,
    email VARCHAR(255),
    CONSTRAINT pk_users PRIMARY KEY (id)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "users",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{},
			},
			previousTable: &storepb.TableMetadata{
				Name: "users",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "pk_users",
						Primary:      true,
						Expressions:  []string{"id"},
						IsConstraint: true,
					},
				},
			},
			expectedSDL: `CREATE TABLE users (
    "id" INTEGER NOT NULL,
    "email" VARCHAR(255)
);`,
			description: "Should drop primary key constraint from table",
		},

		{
			name: "Drop unique constraint from table",
			originalSDL: `CREATE TABLE products (
    id INTEGER NOT NULL,
    code VARCHAR(50),
    CONSTRAINT uk_products_code UNIQUE (code)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "products",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "code", Type: "VARCHAR(50)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{},
			},
			previousTable: &storepb.TableMetadata{
				Name: "products",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "code", Type: "VARCHAR(50)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "uk_products_code",
						Unique:       true,
						Expressions:  []string{"code"},
						IsConstraint: true,
					},
				},
			},
			expectedSDL: `CREATE TABLE products (
    "id" INTEGER NOT NULL,
    "code" VARCHAR(50)
);`,
			description: "Should drop unique constraint from table",
		},

		{
			name: "Drop foreign key constraint from table",
			originalSDL: `CREATE TABLE order_items (
    id INTEGER NOT NULL,
    order_id INTEGER,
    CONSTRAINT fk_order_items_order FOREIGN KEY (order_id) REFERENCES "public"."orders" (id)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "order_items",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "order_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{},
			},
			previousTable: &storepb.TableMetadata{
				Name: "order_items",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "order_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{
					{
						Name:              "fk_order_items_order",
						Columns:           []string{"order_id"},
						ReferencedSchema:  "public",
						ReferencedTable:   "orders",
						ReferencedColumns: []string{"id"},
					},
				},
			},
			expectedSDL: `CREATE TABLE order_items (
    "id" INTEGER NOT NULL,
    "order_id" INTEGER
);`,
			description: "Should drop foreign key constraint from table",
		},

		// Modify Constraint Tests
		{
			name: "Modify primary key constraint (change columns)",
			originalSDL: `CREATE TABLE composite_pk (
    id INTEGER NOT NULL,
    tenant_id INTEGER NOT NULL,
    name VARCHAR(255),
    CONSTRAINT pk_composite_old PRIMARY KEY (id)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "composite_pk",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "tenant_id", Type: "INTEGER", Nullable: false},
					{Name: "name", Type: "VARCHAR(255)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "pk_composite_new",
						Primary:      true,
						Expressions:  []string{"id", "tenant_id"},
						IsConstraint: true,
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "composite_pk",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "tenant_id", Type: "INTEGER", Nullable: false},
					{Name: "name", Type: "VARCHAR(255)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "pk_composite_old",
						Primary:      true,
						Expressions:  []string{"id"},
						IsConstraint: true,
					},
				},
			},
			expectedSDL: `CREATE TABLE composite_pk (
    "id" INTEGER NOT NULL,
    "tenant_id" INTEGER NOT NULL,
    "name" VARCHAR(255),
    CONSTRAINT "pk_composite_new" PRIMARY KEY ("id", "tenant_id")
);`,
			description: "Should modify primary key constraint to include multiple columns",
		},

		{
			name: "Modify unique constraint (change columns)",
			originalSDL: `CREATE TABLE users_unique (
    id INTEGER NOT NULL,
    email VARCHAR(255),
    username VARCHAR(100),
    CONSTRAINT uk_users_email_only UNIQUE (email)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "users_unique",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
					{Name: "username", Type: "VARCHAR(100)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "uk_users_email_username",
						Unique:       true,
						Expressions:  []string{"email", "username"},
						IsConstraint: true,
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "users_unique",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "email", Type: "VARCHAR(255)", Nullable: true},
					{Name: "username", Type: "VARCHAR(100)", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "uk_users_email_only",
						Unique:       true,
						Expressions:  []string{"email"},
						IsConstraint: true,
					},
				},
			},
			expectedSDL: `CREATE TABLE users_unique (
    "id" INTEGER NOT NULL,
    "email" VARCHAR(255),
    "username" VARCHAR(100),
    CONSTRAINT "uk_users_email_username" UNIQUE ("email", "username")
);`,
			description: "Should modify unique constraint to include multiple columns",
		},

		{
			name: "Modify foreign key constraint (change referenced table)",
			originalSDL: `CREATE TABLE comments (
    id INTEGER NOT NULL,
    author_id INTEGER,
    CONSTRAINT fk_comments_author FOREIGN KEY (author_id) REFERENCES "public"."users" (id)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "comments",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "author_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{
					{
						Name:              "fk_comments_author",
						Columns:           []string{"author_id"},
						ReferencedSchema:  "public",
						ReferencedTable:   "authors",
						ReferencedColumns: []string{"id"},
						OnDelete:          "SET NULL",
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "comments",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "author_id", Type: "INTEGER", Nullable: true},
				},
				ForeignKeys: []*storepb.ForeignKeyMetadata{
					{
						Name:              "fk_comments_author",
						Columns:           []string{"author_id"},
						ReferencedSchema:  "public",
						ReferencedTable:   "users",
						ReferencedColumns: []string{"id"},
					},
				},
			},
			expectedSDL: `CREATE TABLE comments (
    "id" INTEGER NOT NULL,
    "author_id" INTEGER,
    CONSTRAINT "fk_comments_author" FOREIGN KEY ("author_id") REFERENCES "public"."authors" ("id") ON DELETE SET NULL
);`,
			description: "Should modify foreign key constraint to reference different table and add ON DELETE",
		},

		// Complex Mixed Operations
		{
			name: "Replace primary key and add unique constraint",
			originalSDL: `CREATE TABLE logs (
    id INTEGER NOT NULL,
    session_id VARCHAR(255) NOT NULL,
    timestamp TIMESTAMP,
    CONSTRAINT pk_logs_id PRIMARY KEY (id)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "logs",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "session_id", Type: "VARCHAR(255)", Nullable: false},
					{Name: "timestamp", Type: "TIMESTAMP", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "pk_logs_session_timestamp",
						Primary:      true,
						Expressions:  []string{"session_id", "timestamp"},
						IsConstraint: true,
					},
					{
						Name:         "uk_logs_id",
						Unique:       true,
						Expressions:  []string{"id"},
						IsConstraint: true,
					},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "logs",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "session_id", Type: "VARCHAR(255)", Nullable: false},
					{Name: "timestamp", Type: "TIMESTAMP", Nullable: true},
				},
				Indexes: []*storepb.IndexMetadata{
					{
						Name:         "pk_logs_id",
						Primary:      true,
						Expressions:  []string{"id"},
						IsConstraint: true,
					},
				},
			},
			expectedSDL: `CREATE TABLE logs (
    "id" INTEGER NOT NULL,
    "session_id" VARCHAR(255) NOT NULL,
    "timestamp" TIMESTAMP,
    CONSTRAINT "pk_logs_session_timestamp" PRIMARY KEY ("session_id", "timestamp"),
    CONSTRAINT "uk_logs_id" UNIQUE ("id")
);`,
			description: "Should replace primary key constraint and add unique constraint",
		},
	}

	for _, tc := range testCases {
		t.Run(tc.name, func(t *testing.T) {
			// Parse the original SDL to create an AST chunk
			parseResult, err := pgparser.ParsePostgreSQL(tc.originalSDL)
			require.NoError(t, err, "Failed to parse original SDL")

			// Extract the CREATE TABLE AST node
			var createTableNode *parser.CreatestmtContext
			antlr.ParseTreeWalkerDefault.Walk(&createTableExtractor{
				result: &createTableNode,
			}, parseResult.Tree)
			require.NotNil(t, createTableNode, "Failed to extract CREATE TABLE AST node")

			// Create a mock chunk
			chunk := &schema.SDLChunk{
				Identifier: "public." + tc.currentTable.Name,
				ASTNode:    createTableNode,
			}

			// Apply constraint changes
			err = applyTableChangesToChunk(chunk, tc.currentTable, tc.previousTable)
			if tc.expectedSDL == "" {
				// For cases where we don't specify expected SDL, we just want to ensure no error
				assert.NoError(t, err, "applyTableChangesToChunk should not return error")
			} else {
				require.NoError(t, err, "applyTableChangesToChunk failed")

				// Get the modified SDL text by recreating the chunk text
				// Since we don't have a direct way to get text from AST, we'll validate the structure instead
				// This is a limitation - in a real scenario, we'd want to validate the actual SDL output
				assert.NotNil(t, chunk.ASTNode, "Chunk AST node should not be nil after modification")
				t.Logf("Test case '%s' passed: %s", tc.name, tc.description)
			}
		})
	}
}

// TestConstraintModificationOperations tests constraint modification operations
func TestConstraintModificationOperations(t *testing.T) {
	testCases := []struct {
		name          string
		originalSDL   string
		currentTable  *storepb.TableMetadata
		previousTable *storepb.TableMetadata
		description   string
	}{
		{
			name: "Modify check constraint expression",
			originalSDL: `CREATE TABLE test (
    id INTEGER NOT NULL,
    age INTEGER,
    CONSTRAINT chk_age_positive CHECK (age > 0)
);`,
			currentTable: &storepb.TableMetadata{
				Name: "test",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "age", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{
					{Name: "chk_age_positive", Expression: "age >= 0"},
				},
			},
			previousTable: &storepb.TableMetadata{
				Name: "test",
				Columns: []*storepb.ColumnMetadata{
					{Name: "id", Type: "INTEGER", Nullable: false},
					{Name: "age", Type: "INTEGER", Nullable: true},
				},
				CheckConstraints: []*storepb.CheckConstraintMetadata{
					{Name: "chk_age_positive", Expression: "age > 0"},
				},
			},
			description: "Should modify check constraint expression",
		},
	}

	for _, tc := range testCases {
		t.Run(tc.name, func(t *testing.T) {
			// Parse the original SDL to create an AST chunk
			parseResult, err := pgparser.ParsePostgreSQL(tc.originalSDL)
			require.NoError(t, err, "Failed to parse original SDL")

			// Extract the CREATE TABLE AST node
			var createTableNode *parser.CreatestmtContext
			antlr.ParseTreeWalkerDefault.Walk(&createTableExtractor{
				result: &createTableNode,
			}, parseResult.Tree)
			require.NotNil(t, createTableNode, "Failed to extract CREATE TABLE AST node")

			// Create a mock chunk
			chunk := &schema.SDLChunk{
				Identifier: "public." + tc.currentTable.Name,
				ASTNode:    createTableNode,
			}

			// Apply constraint changes
			err = applyTableChangesToChunk(chunk, tc.currentTable, tc.previousTable)
			assert.NoError(t, err, "applyTableChangesToChunk should not return error")
			assert.NotNil(t, chunk.ASTNode, "Chunk AST node should not be nil after modification")
			t.Logf("Test case '%s' passed: %s", tc.name, tc.description)
		})
	}
}
